# projector

./: .gitignore  Cargo.toml  LICENSE  README  README.md
.github/workflows/: pipeline.yml
logging/: Cargo.toml
platform/: Cargo.toml
platform/src/: lib.rs
platform/src/linux/: application.rs  window.rs
platform/src/macos/: application.rs  mod.rs  window.rs
settings/: Cargo.toml
src/: main.rs
