[package]
name = "projector"
version = "0.1.0"
authors = ["Timothy Pidashev <pidashev.tim@gmail.com"]
repository = "https://github.com/fhcmedia/projector"
license = "MIT"
edition = "2021"

[workspace]
members = [
    "database",
    "errors",
    "logging",
    "modules",
    "platform",
    "settings",
]

[dependencies]
database = { path = "./database" }
errors = { path = "./errors/" }
logging = { path = "./logging" }
modules = { path = "./modules" }
platform = { path = "./platform" }

